fix messages spacing

--- a/behave_html_pretty_formatter/theme.css
+++ b/behave_html_pretty_formatter/theme.css
@@ -235,8 +235,7 @@ header {
 
 /*EMBED CONTENT*/
 .messages {
-  padding: 2px;
-  margin: 10px;
+  margin: 1px 0 10px 15px
 }
 .scenario-capsule .messages.contrast:last-child {
   border-bottom: 1px dashed #fff;
